# otus_homework

./: .dockerignore  .gitignore  README.md  requirements.txt
homework_01/: main.py
homework_02/: base.py  car.py  plane.py
homework_03/: Dockerfile  main.py  requirements.txt
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  app.py  config.py  docker-compose.yml  requirements.txt
homework_06/migrations/versions/: 3a561a08ab69_initial_migration.py  e752e21c168c_adding_table.py
homework_06/models/: __init__.py  database.py  posts.py
homework_06/templates/: about.html  base.html  index.html
homework_06/templates/posts/: add.html  details.html  list.html
homework_06/views/: posts.py
homework_07/inventory/: pyproject.toml
homework_07/inventory/inventory/: settings.py  urls.py
homework_07/inventory/mainapp/: apps.py  models.py  views.py
homework_07/inventory/mainapp/migrations/: 0001_initial.py
homework_08/inventory/inventory/: urls.py
homework_08/inventory/mainapp/: models.py  views.py
homework_09/inventory/inventory/: settings.py
homework_09/inventory/mainapp/: models.py
homework_09/inventory/mainapp/migrations/: 0006_alter_card_name.py  (+4 more)
homework_10/homowork_10/: README.md
homework_10/inventory/: pyproject.toml
homework_10/inventory/inventory/: urls.py
homework_10/inventory/mainapp/: tests_views.py  views.py
homework_10/inventory/mainapp/migrations/: 0002_card_name.py  0011_rename_name_card_title.py
(+17 files in other folders)
